--- a/mpd/.mpd.conf
+++ b/mpd/.mpd.conf
@@ -1,7 +1,7 @@
 bind_to_address        "0.0.0.0"
 port "6600"
 music_directory "~/Music"
-playlist_directory "/home/ylan/.mpd/playlists"
+playlist_directory "~/Data/Perso/playlists/"
 db_file "/home/ylan/.mpd/mpd.db"
 log_file "/home/ylan/.mpd/mpd.log"
 pid_file "/home/ylan/.mpd/mpd.pid"
