--- a/kitty/.config/kitty.conf
+++ b/kitty/.config/kitty.conf
@@ -18,16 +18,15 @@
 #
 # vim, fzf. syntax, polybar, conky
 #
-#
 # alternatives: alacritty termite kitty termius st xterm 
 
 
 include ~/.cache/wal/colors-kitty.conf
 map f1 pipe @ansi window less +G -R
-font_family      FuraCode Nerd Font
-italic_font      auto
-bold_font        auto
-bold_italic_font auto
+font_family      Fira Code
+# italic_font      flottflott:style=regular
+italic_font      Space Mono Bold Italic
+bold_font        Software Tester 7
 adjust_line_height 0
 adjust_column_width 0
 box_drawing_scale 0.001, 1, 1.5, 2
