--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -9,7 +9,7 @@ map F  console scout -ftsea%space
 map ysa shell Rscript -e 'shiny::runApp(host="0.0.0.0", port=8282)'
 map bw shell wal -c -i %f && cp %f ~/.config/wall.png && wal-steam -w
 map bm shell wal -i %f  -o "/Users/ylan/wal/contrib/wal2iterm/wal2iterm" && rm ~/wal.itermcolors && mv ~/.cache/wal/itermcolors/%f.itermcolors ~/wal.itermcolors
-map tr shell transmission-remote --add $(cat %f)
+map tr shell transmission-remote $torrent --add $(cat %f)
 map O shell convert -rotate 90 %f %f
 map ee shell ./$f
 set vcs_aware true
