--- a/gtk/.config/gtk-3.0/settings.ini
+++ b/gtk/.config/gtk-3.0/settings.ini
@@ -1,10 +1,10 @@
 [Settings]
-gtk-theme-name=Numix
-gtk-icon-theme-name=Numix
-gtk-font-name=Cantarell 11
-gtk-cursor-theme-name=oxy-oxygen
+gtk-theme-name=oomox-xresources
+gtk-icon-theme-name=Numix-Circle
+gtk-font-name=Fira Code Light 11
+gtk-cursor-theme-name=Adwaita
 gtk-cursor-theme-size=0
-gtk-toolbar-style=GTK_TOOLBAR_ICONS
+gtk-toolbar-style=GTK_TOOLBAR_BOTH
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
 gtk-button-images=1
 gtk-menu-images=1
@@ -13,5 +13,5 @@ gtk-enable-input-feedback-sounds=1
 gtk-xft-antialias=1
 gtk-xft-hinting=1
 gtk-xft-hintstyle=hintfull
-gtk-modules=gail:atk-bridge
-gtk-cursor-theme-size=48
+gtk-cursor-theme-size=0
+gtk-xft-rgba=rgb
