--- a/newsboat/.config/newsboat/config
+++ b/newsboat/.config/newsboat/config
@@ -1,50 +1,47 @@
-auto-reload yes
+external-url-viewer "urlview.sh"
+bind-key j down
+bind-key k up
+bind-key j next articlelist
+bind-key k prev articlelist
+bind-key J next-feed articlelist
+bind-key K prev-feed articlelist
+bind-key G end
+bind-key g home
+bind-key d pagedown
+bind-key u pageup
+bind-key l open
+bind-key h quit
+bind-key a toggle-article-read
+bind-key n next-unread
+bind-key N prev-unread
+bind-key D pb-download
+bind-key U show-urls
+bind-key x pb-delete
 
-        external-url-viewer "urlview"
+color listnormal cyan default
+color listfocus black yellow standout bold
+color listnormal_unread blue default
+color listfocus_unread yellow default bold
+color info red black bold
+color article cyan default
 
-        bind-key j down
-        bind-key k up
-        bind-key j next articlelist
-        bind-key k prev articlelist
-        bind-key J next-feed articlelist
-        bind-key K prev-feed articlelist
-        bind-key G end
-        bind-key g home
-        bind-key d pagedown
-        bind-key u pageup
-        bind-key l open
-        bind-key h quit
-        bind-key a toggle-article-read
-        bind-key n next-unread
-        bind-key N prev-unread
-        bind-key D pb-download
-        bind-key U show-urls
-        bind-key x pb-delete
+# browser urlview.sh
+browser mpv %u > /dev/null
+max-items 0
+macro , open-in-browser
+# macro t set browser "tsp youtube-dl --add-metadata -ic"; open-in-browser ; set browser linkhandler
+macro a set browser "tsp youtube-dl --add-metadata -xic"; open-in-browser ; set browser linkhandler
+macro v set browser "setsid nohup mpv"; open-in-browser ; set browser linkhandler
+macro w set browser "w3m"; open-in-browser ; set browser linkhandler
+# macro p set browser "dmenuhandler"; open-in-browser ; set browser linkhandler
+macro c set browser "copy(){ echo $1 | xclip ;}; copy "; open-in-browser ; set browser linkhandler
+macro m set browser "mpv --ytdl --ontop --no-border --force-window --autofit=960x540 --geometry=-20-50 %u > /dev/null &"; open-in-browser ; set browser "$BROWSER %u"``
 
-        color listnormal cyan default
-        color listfocus black yellow standout bold
-        color listnormal_unread blue default
-        color listfocus_unread yellow default bold
-        color info red black bold
-        color article cyan default
-
-        browser linkhandler
-        macro , open-in-browser
-        macro t set browser "tsp youtube-dl --add-metadata -ic"; open-in-browser ; set browser linkhandler
-        macro a set browser "tsp youtube-dl --add-metadata -xic"; open-in-browser ; set browser linkhandler
-        macro v set browser "setsid nohup mpv"; open-in-browser ; set browser linkhandler
-        macro w set browser "w3m"; open-in-browser ; set browser linkhandler
-        macro p set browser "dmenuhandler"; open-in-browser ; set browser linkhandler
-        # c copies the link to the clipboard.
-        # The line below is probably the skiddiest line I've ever written.
-        macro c set browser "copy(){ echo $1 | xclip ;}; copy "; open-in-browser ; set browser linkhandler
-
-
-        urls-source "ttrss"
-        ttrss-url "localhost:81"
-        ttrss-login "admin"
-        ttrss-password "password"
-        ttrss-flag-star "s"
-        ttrss-mode "multi" 
-        ttrss-flag-publish "p"
-        # urls-source "opml"
+#urls-source "ttrss"
+#ttrss-url 192.168.2.102:88
+#ttrss-login admin
+#ttrss-password password
+#ttrss-mode "multi"
+#ttrss-flag-star "s"
+#ttrss-flag-publish "p"
+# urls-source "opml"
