--- a/compton/.config/compton.conf
+++ b/compton/.config/compton.conf
@@ -1,6 +1,7 @@
-opacity-rule = [ "80:class_g = 'XTerm'" ];
+# opacity-rule = [ "80:class_g = 'XTerm'" ];
+opacity-rule = [ "80:class_g = 'Alacritty'", "100:class_g = 'mpv'" ];
 shadow = false;
-no-dock-shadow = false;
+# no-dock-shadow = false;
 shadow-red = 0.211765;
 shadow-green = 0.756863;
 shadow-blue = 0.784314;
@@ -12,5 +13,6 @@ blur-background = false;
 blur-background-frame = true;
 backend = "glx";
 # active-opacity = 0.80;
-# inactive-opacity = 0.8;
+inactive-opacity = 0.8;
 # menu-opacity = 0.8;
+unredir-if-possible = false;
