updated polybar for wal

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -91,3 +91,5 @@ map f8 pipe @text overlay vim -
 scrollback_pager nvim -c 'set ft=man' -
 
 include ~/.cache/wal/colors-kitty.conf
+
+enable_audio_bell yes
