--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -1,31 +1,11 @@
-;==========================================================
-;
-;
-;   ██████╗  ██████╗ ██╗  ██╗   ██╗██████╗  █████╗ ██████╗
-;   ██╔══██╗██╔═══██╗██║  ╚██╗ ██╔╝██╔══██╗██╔══██╗██╔══██╗
-;   ██████╔╝██║   ██║██║   ╚████╔╝ ██████╔╝███████║██████╔╝
-;   ██╔═══╝ ██║   ██║██║    ╚██╔╝  ██╔══██╗██╔══██║██╔══██╗
-;   ██║     ╚██████╔╝███████╗██║   ██████╔╝██║  ██║██║  ██║
-;   ╚═╝      ╚═════╝ ╚══════╝╚═╝   ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝
-;
-;
-;   To learn more about how to configure Polybar
-;   go to https://github.com/polybar/polybar
-;
-;   The README contains a lot of information
-;
-;==========================================================
-
 [colors]
-;background = ${xrdb:color0:#222}
-background = #222
-background-alt = #444
-;foreground = ${xrdb:color7:#222}
-foreground = #dfdfdf
-foreground-alt = #555
-primary = #ffb52a
-secondary = #e60053
-alert = #bd2c40
+background = ${xrdb:color0:#222}
+background-alt = ${xrdb:color4:444}
+foreground = ${xrdb:color7:#222}
+foreground-alt = ${xrdb:color5:#555}
+primary = ${xrdb:color1}
+secondary = ${xrdb:color2}
+alert = ${xrdb:color3}
 
 [bar/openbox]
 ;monitor = ${env:MONITOR:HDMI-1}
@@ -83,7 +63,7 @@ width = 100%
 height = 27
 ;offset-x = 1%
 ;offset-y = 1%
-radius = 6.0
+;radius = 6.0
 fixed-center = false
 
 background = ${colors.background}
@@ -93,7 +73,7 @@ line-size = 3
 line-color = #f00
 
 border-size = 4
-border-color = #00000000
+borderl-color = ${colors.background}
 
 padding-left = 0
 padding-right = 2
@@ -107,7 +87,7 @@ font-2 = siji:pixelsize=10;1
 
 modules-left = bspwm i3
 modules-center = mpd
-modules-right = filesystem xbacklight pulseaudio xkeyboard memory cpu wlan eth battery temperature date powermenu
+modules-right = pulseaudio cpu wlan eth battery temperature date powermenu
 
 tray-position = right
 tray-padding = 2
@@ -228,7 +208,7 @@ icon-pause = 
 icon-next = 
 
 label-song-maxlen = 25
-label-song-ellipsis = true
+label-song-ellipsis = false
 
 [module/xbacklight]
 type = internal/xbacklight
@@ -257,7 +237,7 @@ type = internal/cpu
 interval = 2
 format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #f90000
+format-underline = ${colors.foreground}
 label = %percentage:2%%
 
 [module/memory]
@@ -265,7 +245,7 @@ type = internal/memory
 interval = 2
 format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #4bffdc
+format-underline = {colors.foreground}
 label = %percentage_used%%
 
 [module/wlan]
@@ -318,7 +298,7 @@ time-alt = %H:%M:%S
 
 format-prefix = 
 format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #0a6cf5
+format-underline = ${colors.foreground}
 
 label = %date% %time%
 
@@ -464,7 +444,7 @@ screenchange-reload = true
 ;compositing-background = screen
 ;compositing-foreground = source
 ;compositing-border = over
-;pseudo-transparency = false
+pseudo-transparency = true
 
 [global/wm]
 margin-top = 5
