--- a/compton/.config/compton.conf
+++ b/compton/.config/compton.conf
@@ -1,18 +1,69 @@
 # opacity-rule = [ "80:class_g = 'XTerm'" ];
-opacity-rule = [ "80:class_g = 'Alacritty'", "100:class_g = 'mpv'" ];
-shadow = false;
+# # opacity-rule = [ "70:class_g = 'kitty'", "100:class_g = 'mpv'" ];
+# # opacity-rule = [ "70:class_g = 'kitty'"];
+# # opacity-rule = [ "70:class_g = 'kitty'"];
+# shadow = true;
 # no-dock-shadow = false;
-shadow-red = 0.211765;
-shadow-green = 0.756863;
-shadow-blue = 0.784314;
-shadow-opacity = 0.0;
-shadow-offset-y = 0;
-shadow-offset-x = 0;
-shadow-radius = 0;
-blur-background = false;
-blur-background-frame = true;
-backend = "glx";
-# active-opacity = 0.80;
-inactive-opacity = 0.8;
-# menu-opacity = 0.8;
-unredir-if-possible = false;
+# shadow-red = 0.211765;
+# shadow-green = 0.756863;
+# shadow-blue = 0.784314;
+# shadow-opacity = 0.0;
+# shadow-offset-y = 0;
+# shadow-offset-x = 0;
+# shadow-radius = 0;
+# blur-background = false;
+# blur-background-frame = false;
+# backend = "glx";
+# # active-opacity = 0.80;
+# # inactive-opacity = 0.8;
+# unredir-if-possible = false;
+#
+#
+# #################################
+# ##           Fading              #
+# ##################################
+#
+#
+# # Fade windows in/out when opening/closing and when opacity changes,
+# #  unless no-fading-openclose is used.
+# # fading = false
+# fading = true;
+#
+# # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
+# # fade-in-step = 0.028
+# fade-in-step = 0.50;
+#
+# # Opacity change between steps while fading out. (0.01 - 1.0, defaults to 0.03)
+# # fade-out-step = 0.03
+# fade-out-step = 0.075;
+#
+# # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
+# # fade-delta = 10
+#
+# # Specify a list of conditions of windows that should not be faded.
+# # fade-exclude = []
+#
+# # Do not fade on window open/close.
+# # no-fading-openclose = false
+#
+# # Do not fade destroyed ARGB windows with WM frame. Workaround of bugs in Openbox, Fluxbox, etc.
+# # no-fading-destroyed-argb = false
+# #
+#
+# #################################
+# #           Corners             #
+# #################################
+#
+# # Sets the radius of rounded window corners. When > 0, the compositor will
+# # round the corners of windows. Does not interact well with
+# # `transparent-clipping`.
+# corner-radius = 0.5
+#
+# # Exclude conditions for rounded corners.
+# rounded-corners-exclude = [
+#   "window_type = 'dock'",
+#   "window_type = 'desktop'"
+# ];
+#
+#
+# detect-rounded-corners = true;
