--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -22,10 +22,11 @@
 
 
 map f1 pipe @ansi window less +G -R
-font_family      Fira Code
+font_family      FiraCode Nerd Font
 # italic_font      flottflott:style=regular
-italic_font      Space Mono Bold Italic
-bold_font        Software Tester 7
+# italic_font      Space Mono Bold Italic
+# bold_font        Software Tester 7
+font_size 18
 adjust_line_height 0
 adjust_column_width 0
 box_drawing_scale 0.001, 1, 1.5, 2
@@ -33,7 +34,6 @@ cursor     #E95678
 cursor_shape     block
 cursor_blink_interval     3
 scrollback_lines 2000
-scrollback_pager less +G -R
 wheel_scroll_multiplier 5.0
 url_color #26BBD9
 url_style curly
@@ -88,8 +88,9 @@ map ctrl+shift+a>d set_background_opacity default
 #map ctrl+alt+a send_text normal Word\x1b[H
 #map ctrl+alt+a send_text application Word\x1bOH]
 map f8 pipe @text overlay vim -
+# scrollback_pager less +G -R
 scrollback_pager nvim -c 'set ft=man' -
 
 include ~/.cache/wal/colors-kitty.conf
 
-enable_audio_bell yes
+enable_audio_bell no
