--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -2,3 +2,7 @@ sub-auto=fuzzy
 ytdl-format=best
 ytdl-raw-options=sub-format=en,write-srt=
 save-position-on-quit
+alpha=yes
+background="#00000000"
+screenshot-directory=~/Images/Screenshots/
+screenshot-template="%F-%P-screenshots"
