--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -81,13 +81,14 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 2
 
-font-0 = fixed:pixelsize=10;1
+# font-0 = fixed:pixelsize=12;1
+font-0 = FiraCode Nerd Font:pixelsize=10;1
 font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 font-2 = siji:pixelsize=10;1
 
 modules-left = bspwm i3
 modules-center = mpd
-modules-right = pulseaudio cpu wlan eth battery temperature date powermenu
+modules-right = pulseaudio cpu wlan eth battery memory temperature weather date powermenu
 
 tray-position = right
 tray-padding = 2
@@ -200,14 +201,12 @@ label-urgent-padding = 2
 [module/mpd]
 type = internal/mpd
 format-online = <label-song>  <icon-prev> <icon-stop> <toggle> <icon-next>
-
 icon-prev = 
 icon-stop = 
 icon-play = 
 icon-pause = 
 icon-next = 
-
-label-song-maxlen = 25
+label-song-maxlen = 50
 label-song-ellipsis = false
 
 [module/xbacklight]
@@ -306,12 +305,10 @@ label = %date% %time%
 type = internal/pulseaudio
 
 format-volume = <label-volume> <bar-volume>
-label-volume = VOL %percentage%%
+label-volume = %percentage%%
 label-volume-foreground = ${root.foreground}
-
 label-muted = 🔇 muted
 label-muted-foreground = #666
-
 bar-volume-width = 10
 bar-volume-foreground-0 = #55aa55
 bar-volume-foreground-1 = #55aa55
@@ -328,6 +325,7 @@ bar-volume-fill-font = 2
 bar-volume-empty = ─
 bar-volume-empty-font = 2
 bar-volume-empty-foreground = ${colors.foreground-alt}
+click-left = pavucontrol
 
 [module/alsa]
 type = internal/alsa
@@ -392,22 +390,14 @@ animation-discharging-framerate = 750
 
 [module/temperature]
 type = internal/temperature
+
 thermal-zone = 0
-warn-temperature = 60
+warn-temperature = 70
 
-format = <ramp> <label>
-format-underline = #f50a4d
-format-warn = <ramp> <label-warn>
-format-warn-underline = ${self.format-underline}
-
+format = <label>
+format-underline = ${xrdb:color3}
+hwmon-path=/sys/devices/pci0000:00/0000:00:18.3/hwmon/hwmon1/temp3_input
 label = %temperature-c%
-label-warn = %temperature-c%
-label-warn-foreground = ${colors.secondary}
-
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
-ramp-foreground = ${colors.foreground-alt}
 
 [module/powermenu]
 type = custom/menu
@@ -451,3 +441,11 @@ margin-top = 5
 margin-bottom = 5
 
 ; vim:ft=dosini
+
+
+[module/weather]
+type = custom/script
+exec = wedder
+exec-if = ping openweathermap.org -c 1
+tail = true
+click-left = $BROWSER "https://google.de/search?q=weather"
