--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -36,7 +36,7 @@ set -s escape-time 0
 
 # Set status bar
 set -g status-justify left
-set -g status-style fg=white,bg=black
+set -g status-style fg=white,bg=red
 set-option -g status-interval 5
 set -g status-right-length 150
 set -g status-left ""
@@ -137,10 +137,14 @@ bind - split-window -v
 bind _ split-window -h
 
 # pane navigation
-bind -r h select-pane -L  # move left
-bind -r j select-pane -D  # move down
-bind -r k select-pane -U  # move up
-bind -r l select-pane -R  # move right
+# bind -r h select-pane -L  # move left
+# bind -r j select-pane -D  # move down
+# bind -r k select-pane -U  # move up
+# bind -r l select-pane -R  # move right
+bind h select-pane -L  # move left
+bind j select-pane -D  # move down
+bind k select-pane -U  # move up
+bind l select-pane -R  # move right
 bind > swap-pane -D       # swap current pane with the next one
 bind < swap-pane -U       # swap current pane with the previous one
 
