--- a/qutebrowser/.config/qutebrowser/autoconfig.yml
+++ b/qutebrowser/.config/qutebrowser/autoconfig.yml
@@ -6,8 +6,5 @@
 
 config_version: 2
 settings:
-  content.geolocation:
-    https://www.google.com.ar: false
-  content.notifications:
-    https://linuxize.com: false
-    https://www.reddit.com: false
+  content.register_protocol_handler:
+    https://mail.google.com?extsrc=mailto&url=%25s: false
