--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -4,5 +4,5 @@ ytdl-raw-options=sub-format=en,write-srt=
 save-position-on-quit
 alpha=yes
 background="#00000000"
-screenshot-directory=~/Images/Screenshots/
+screenshot-directory=~/Pictures/Screenshots/
 screenshot-template="%F-%P-screenshots"
